# c-std

./: meson.build
.github/workflows/: unit-tests.yaml
include/: stderror.h
include/std/: error.h  unique.h  unused.h
src/: std-error.c  stderror.c
tests/: meson.build  std-error-tests.cpp  stderror-tests.cpp
